# poetry_depandabot

./: pyproject.toml
.github/: dependabot.yml
